--- a/k8s/storage-class.yml
+++ b/k8s/storage-class.yml
@@ -1,27 +1,8 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: wordpress-pv
-spec:
-  capacity:
-    storage: 20Gi
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: standard-rwo
-  persistentVolumeReclaimPolicy: Retain
-  gcePersistentDisk:
-    pdName: wordpress-disk
-    fsType: ext4
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
 metadata:
-  name: wordpress-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 20Gi
-  volumeName: wordpress-pv
-  storageClassName: standard-rwo
+  name: wordpress-sc
+provisioner: kubernetes.io/gce-pd
+parameters:
+  type: pd-standard
