--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -1,4 +1,12 @@
 apiVersion: networking.k8s.io/v1
+kind: IngressClass
+metadata:
+  name: external-nginx
+spec:
+  controller: k8s.io/ingress-nginx
+---
+# ingress.yaml
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: wordpress-ingress
@@ -10,8 +18,8 @@ spec:
   - host: bar.bagum.shop
     http:
       paths:
-      - path: /
-        pathType: Prefix
+      - pathType: Prefix
+        path: /
         backend:
           service:
             name: wordpress
