--- a/k8s/wordpress-pvc.yml
+++ b/k8s/wordpress-pvc.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wordpress-pvc-new
+  name: wordpress-data
 spec:
-  storageClassName: standard-rwo
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
+  storageClassName: standard-rwo
